--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A coomand-line application that manages a company's employee database, using Node.js, Inquirer, and MySQL.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/AyushManiSharma/Employee-Tracker#readme",
   "dependencies": {
     "inquirer": "^8.2.4",
+    "mysql2": "^3.6.1",
     "node": "^20.7.0"
   }
 }
